# hm3-agent

./: .env.example  README.md  config.py  db.py  main.py  pyproject.toml  schema.py
features/: command_handler.py  manual_expense_handler.py  prompts.py  receipt_handler.py
services/: chart_service.py  excel_formatter.py  telegram_client.py
