[project]
name = "hm3-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=2.8.0",
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tzdata>=2026.2",
]
